Closed Bug 219536 Opened 21 years ago Closed 21 years ago

nsWidget::InitEvent leaks events, and thus the main window

Categories

(Core Graveyard :: GFX: Gtk, defect, P3)

x86
Linux
defect

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.6alpha

People

(Reporter: dbaron, Assigned: dbaron)

Details

(Keywords: memory-leak, Whiteboard: [patch])

Attachments

(3 files)

nsWidget::InitEvent leaks events, and thus the main window, since gtk_get_current_event returns a result that was copied and must be freed using gdk_event_free.
Status: NEW → ASSIGNED
Keywords: mlk
Priority: -- → P3
Whiteboard: [patch]
Target Milestone: --- → mozilla1.6alpha
Attachment #131645 - Flags: superreview?(bryner)
Attachment #131645 - Flags: review?(blizzard)
So copying the event prevents it from being leaked? That seems odd.
No, it's always been copied. We need to free the copy to prevent the window from being leaked. (The events themselves are arena-allocated.)
Comment on attachment 131645 [details] [diff] [review] patch ahh, sorry. I was mis-reading the patch.
Attachment #131645 - Flags: review?(blizzard) → review+
Attachment #131645 - Flags: superreview?(bryner) → superreview+
Fix checked in to trunk, 2003-09-24 22:34:25 -0700.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: