Fix leak of GDK events, and thus the main GDK window.  b=219536  r=blizzard  sr=bryner